# aishenreemo.github.io

./: 404.html  Cargo.toml  Dioxus.toml  index.html  input.css  rustfmt.toml  tailwind.config.js
.github/workflows/: dioxus.yml
assets/: about_me-151c955586b71a6e.svg.br  aivan-247b90f712eb8e6d.png.br  favicon-c931cec762de8923.svg.br  main-54bd9486cfb090df.css  main-54bd9486cfb090df.css.br  main-f359d62c262168c5.css  main-f359d62c262168c5.css.br  portfolio-30ac8e3343783a98.js  portfolio-30ac8e3343783a98.js.br  portfolio-7bb2e88db7522206.js  portfolio-7bb2e88db7522206.js.br  portfolio_bg-1b2d7860acc2608d.wasm  portfolio_bg-1b2d7860acc2608d.wasm.br  portfolio_bg-2bcd1060289375e6.wasm  portfolio_bg-2bcd1060289375e6.wasm.br  portfolio_bg-96fe4b7a7186c68d.wasm  portfolio_bg-96fe4b7a7186c68d.wasm.br  portfolio_bg-9ba2b446ee520109.wasm  portfolio_bg-9ba2b446ee520109.wasm.br  profile-4d5932537c1048e7.svg.br  projects-09873b74e5360d50.svg.br  tailwind-149794f2ae3169b6.css  tailwind-149794f2ae3169b6.css.br  tailwind-7c922b41b1e45b77.css  tailwind-7c922b41b1e45b77.css.br  tailwind-b37414a6af66223a.css  tailwind-b37414a6af66223a.css.br  tailwind-fe5b28616f4bbc45.css  tailwind-fe5b28616f4bbc45.css.br  technologies-88db158c4d7c46af.svg.br
assets/data/: technologies.ron  technologies.ron.br  works.ron  works.ron.br
assets/images/: ArchLinux_logo.webp.br  Bevy_logo.png.br  C_logo.png.br  GIMP_logo.svg.br  GNU_logo.png.br  Godot_logo.svg.br  Hyprdots_banner.png.br  Inkscape_logo.png.br  Java_logo.png.br  Javascript_logo.png.br  LaTeX_logo.png.br  LinuxMint_logo.png.br  (+14 more)
src/: main.rs
(+11 files in other folders)
