[package]
name = "portfolio"
version = "0.1.0"
authors = ["Aishen Reemo <aish3n@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["html"] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.0" }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
